tests/testcases/errors/BCE0051-1.boo
"""
BCE0051-1.boo(4,11): BCE0051: Operator '^' cannot be used with a left hand side of type 'double' and a right hand side of type 'double'.
"""
print 3.0 ^ 1.1
